Created second collection and added route, controller, and validation for second collection
